objects/AdClaimChangeLog__c.object
<CustomObject>
    <description>SFDC1-346 Creating a new object named Ad Claim Change Log</description>
    <fields>
        <fullName>AdClaim__c</fullName>
        <description>SFDC1-346 Related Ad Claim</description>
        <inlineHelpText>Related Ad Claim</inlineHelpText>
        <label>Ad Claim</label>
        <referenceTo>AdClaim__c</referenceTo>
        <relationshipLabel>Ad Claim Change Logs</relationshipLabel>
        <relationshipName>AdClaim</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ApprovalComments__c</fullName>
        <description>SFDC1-346 Approval Comments to be provided if record is being approved.</description>
        <inlineHelpText>Any comments that will be helpful to the account representative when discussing the claim with the requestor</inlineHelpText>
        <label>Approval Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovalDate__c</fullName>
        <description>SFDC1-346 Approval Date to be provided if record is being approved.</description>
        <inlineHelpText>Date on which the change is approved</inlineHelpText>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApprovedClaimLanguage__c</fullName>
        <description>SFDC1-346 Approved Claim Language</description>
        <inlineHelpText>Language that is approved to use in the claim. (This may be different from the proposed language)</inlineHelpText>
        <label>Approved Claim Language</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovedDate__c</fullName>
        <description>SFDC1-346 Approved Date</description>
        <inlineHelpText>Date the claim is approved</inlineHelpText>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-346 Record Approver</description>
        <inlineHelpText>Name of the person approving the claim</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovingParty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-346 Approving Party</description>
        <inlineHelpText>Name of the person approving the claim</inlineHelpText>
        <label>Approving Party</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NewApprovingParty</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChangeComments__c</fullName>
        <description>SFDC1-346 Change Comments</description>
        <inlineHelpText>Any comments that will be helpful to the person reviewing the claim change</inlineHelpText>
        <label>Change Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field stores the concatenation of the source system name and a source system record ID to ensure the record is uniquely identified</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-7046: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the system ID referencing the source record and is populated via migrating system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SFDC-1560 Store the legacy Polk Ad Claim Change Log number</description>
        <externalId>true</externalId>
        <inlineHelpText>Store the legacy Polk Ad Claim Change Log number</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewApprovedDisclaimerLanguage__c</fullName>
        <description>SFDC1-346 Approved Disclaimer Language</description>
        <inlineHelpText>Language that is approved to use in the disclaimer.  (This may be different from the proposed language)</inlineHelpText>
        <label>Approved Disclaimer Language</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NewMediaType__c</fullName>
        <description>SFDC1-346 New Media Type</description>
        <inlineHelpText>Media type in which the publication will be made. Select all that apply</inlineHelpText>
        <label>Media Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Press Release</fullName>
                </value>
                <value>
                    <fullName>Other (please list)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewProposedDisclaimerLanguage__c</fullName>
        <description>SFDC1-346 New Proposed Disclaimer Language</description>
        <inlineHelpText>Disclaimer language requested by the customer</inlineHelpText>
        <label>Proposed Disclaimer Language</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NewRejectionComments__c</fullName>
        <description>SFDC1-346 Rejection Comments</description>
        <inlineHelpText>Explain the reason for rejecting a claim</inlineHelpText>
        <label>New Rejection Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherMediaType__c</fullName>
        <description>SFDC1-346 Other Media Type</description>
        <inlineHelpText>If the publication will be made in a media type outside of those listed, please enter</inlineHelpText>
        <label>Other Media Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDAdClaimChangeLog__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>ACL{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID AdClaimChangeLog</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProposedClaimLanguage__c</fullName>
        <description>SFDC1-346 Proposed Claim Language</description>
        <inlineHelpText>Claim language requested by the customer</inlineHelpText>
        <label>Proposed Claim Language</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RejectionComments__c</fullName>
        <description>SFDC1-346 Rejection Comments</description>
        <inlineHelpText>Explain the reason for rejecting a claim</inlineHelpText>
        <label>Rejection Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RequestDate__c</fullName>
        <description>SFDC1-346 Request Date</description>
        <inlineHelpText>Date on which the claim change is entered</inlineHelpText>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-346 Requester</description>
        <inlineHelpText>Name of the person requesting the change</inlineHelpText>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requester</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SFDC1-346 Status</description>
        <inlineHelpText>Status of change request in approval process</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Ad Claim Change Log</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Change Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ad Claim Change Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AdClaimApproverCanNOTCreateAdClaimChange</fullName>
        <active>true</active>
        <description>SFDC1-1423 : Ad Claim Approver can not create AdClaim Change Log Record.</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.AdClaimChangeLog__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
ISNEW() &amp;&amp; $User.AdClaimsApprover__c
)</errorConditionFormula>
        <errorMessage>You are not authorized to create Ad Claim Change Log record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AdClaimChangeCanNOTRejectAfterApprove</fullName>
        <active>true</active>
        <description>SFDC1-2023 : AdClaim Change can not be Rejected once Approved.</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.AdClaimChangeLog__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
TEXT(Status__c) = &apos;Rejected&apos; &amp;&amp; TEXT(PRIORVALUE(Status__c)) = &apos;Approved&apos;
)</errorConditionFormula>
        <errorMessage>Approved AdClaim Change Log can not be Rejected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ApprovedAdClaimChangelogEditOnlyApprover</fullName>
        <active>true</active>
        <description>SFDC1-2108 : Approved AdClaim Change log can be only edited by Ad Claim ChangeLog Approver</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.AdClaimChangeLog__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
NOT( ISNEW() ) &amp;&amp; TEXT( Status__c ) = &apos;Approved&apos; &amp;&amp; NOT( $User.AdClaimsApprover__c )
)</errorConditionFormula>
        <errorMessage>Approved AdClaims Changelog can be edited only by Approvers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChangeLogCanNotCreateWithDraftAdClaim</fullName>
        <active>true</active>
        <description>SFDC1-2140 : ADClaim Change Log can not be created with Draft AdClaim Record.</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.AdClaimChangeLog__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
TEXT(AdClaim__r.ClaimsStatus__c ) = &apos;Draft&apos; &amp;&amp;  ISNEW()
)</errorConditionFormula>
        <errorMessage>AdClaim Change Log can not be created with Draft AdClaim.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieldsMandatoryToSubmitOrApproveRecord</fullName>
        <active>true</active>
        <description>SFDC1-1057 At least one field in the &quot;Change Description&quot; section must be filled out before submitting or approving.</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.AdClaimChangeLog__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
AND(
	OR(
		ISPICKVAL( Status__c , &apos;Submitted&apos;),
		ISPICKVAL( Status__c , &apos;Approved&apos;)
		),
	AND( 
		ISBLANK( NewMediaType__c ),
		ISBLANK( OtherMediaType__c ),
		ISBLANK( ProposedClaimLanguage__c ),
		ISBLANK( NewProposedDisclaimerLanguage__c ),
		ISBLANK( ApprovedClaimLanguage__c ),
		ISBLANK( NewApprovedDisclaimerLanguage__c ),
		ISBLANK( ApprovalComments__c ),
		ISBLANK( RejectionComments__c )
		)
	)
)</errorConditionFormula>
        <errorMessage>At least one field in the &quot;Change Description&quot; section must be filled out before submitting or approving.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OnlyApproverCanApproveRejectTheRecord</fullName>
        <active>true</active>
        <description>SFDC1-460 Only a user with &apos;Ad Claim Approver&apos; checkbox checked should be able to Approve/ reject the record.
SFDC1-2108 : Updating the Validation Rule to bypass after Record is Rejected and allowing user to edit.</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.AdClaimChangeLog__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
AND(
	ISCHANGED(Status__c),
	OR(
		ISPICKVAL( Status__c , &apos;Rejected&apos;),
		ISPICKVAL( Status__c , &apos;Approved&apos;)
	),
	$User.AdClaimsApprover__c == FALSE
)
)</errorConditionFormula>
        <errorMessage>Only an Authorized Ad Claim Approver can Approve/ Reject the record. Please contact your System Administrator for more information.</errorMessage>
    </validationRules>
</CustomObject>